# fclones

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  package-docker.sh  package.sh  release.sh  snapcraft.yaml
.circleci/: config.yml
fclones/: Cargo.toml  README.md
fclones-gui/: Cargo.toml  README.md
fclones-gui/src/: app.rs  bytes_entry.rs  dedupe_worker.rs  dir_chooser.rs  duplicates.rs  file_group_item.rs  file_item.rs  group_worker.rs  input.rs  main.rs  progress.rs  style.css
fclones/src/: arg.rs  cache.rs  config.rs  dedupe.rs  device.rs  file.rs  group.rs  hasher.rs  lib.rs  lock.rs  log.rs  main.rs  path.rs  pattern.rs  progress.rs  reflink.rs  regex.rs  report.rs  rlimit.rs  selector.rs  semaphore.rs  transform.rs  util.rs  walk.rs
gen-test-files/: Cargo.toml
gen-test-files/src/: main.rs
packaging/: Dockerfile  build-image.sh  cargo-config.toml  package-internal.sh  package.sh
src/: arg.rs  cache.rs  config.rs  dedupe.rs  device.rs  dirwalk.rs  error.rs  file.rs  files.rs  glob.rs  group.rs  hasher.rs  lib.rs  lock.rs  log.rs  main.rs  partition.rs  path.rs  pattern.rs  phase.rs  pools.rs  progress.rs  reflink.rs  report.rs  rlimit.rs  selector.rs  semaphore.rs  transform.rs  util.rs  walk.rs
