[package]
name = "fclones"
description = "Finds duplicate, unique, under- or over-replicated files"
version = "0.9.0"
authors = ["Piotr Kołaczkowski <pkolaczk@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-counter = "1.0.1"
bytesize = "1.0.0"
byte-unit = "3.1.3"
chrono = "0.4.11"
clap = "2.33.0"
console = "0.11.2"
crossbeam-utils = "0.8"
csv = "1.1.3"
dashmap = "3.11.1"
dunce = "1.0.1"
indicatif = { version = "0.14.0", features = ["with_rayon"] }
indoc = "0.3.5"
itertools = "0.9.0"
lazy-init = "0.5.0"
maplit = "1.0.2"
metrohash = "1.0.6"
nom = { version = "5.1.2", features = ["regexp"] }
pcre2 = { git = "https://github.com/pkolaczk/rust-pcre2.git" }
rayon = "1.4.0"
regex = "1.3.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.6.1"
std-semaphore = "0.1.0"
structopt = "0.3.15"
sysinfo = "0.15.0"
thread_local = "1.0.1"
uuid = { version = "0.8.1", features = ["v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
block-utils = "0.8.2"

[target.'cfg(unix)'.dependencies]
nix = "0.17.0"
libc = "0.2.69"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.8"
winapi-util = "0.1.5"

[package.metadata.deb]
maintainer = "Piotr Kołaczkowski <pkolaczk@gmail.com>"
copyright = "2020, Piotr Kołaczkowski <pkolaczk@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
A simple command-line utility program that finds duplicate, unique, under- or over-replicated files.\
Contrary to fdupes or rdfind, fclones processes files in parallel, which makes it very efficient on SSDs.
fclones communicates through standard Unix streams and it can write reports in human- and machine-friendly formats,
therefore you can easily combine it with other tools.
"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/fclones", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/fclones/README", "644"],
]

