[package]
name = "fclones"
version = "0.12.1"
description = "Finds duplicate, unique, under- or over-replicated files"
authors = ["Piotr Kołaczkowski <pkolaczk@gmail.com>"]
repository = "https://github.com/pkolaczk/fclones"
categories = ["filesystem", "command-line-utilities"]
keywords = ["duplicate", "dupe", "finder", "search"]
license = "MIT"
readme = "README.md"
edition = "2018"
exclude = [
    ".circleci",
    "release.sh"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-counter = "1.0.1"
bytesize = "1.0.0"
byte-unit = "3.1.3"
chrono = { version = "0.4.19", features = ["serde", "clock"] }
clap = "2.33"
console = "0.11.2"
crossbeam-utils = "0.8"
csv = "1.1.3"
dashmap = "3.11.1"
dtparse = "1.2.0"
dunce = "1.0.1"
fallible-iterator = "0.2.0"
filetime = "0.2"
indicatif = { version = "0.14.0", features = ["with_rayon"] }
indoc = "0.3.5"
itertools = "0.9.0"
lazy-init = "0.5.0"
lazy_static = "1.4.0"
maplit = "1.0.2"
metrohash = "1.0.6"
nom = { version = "5.1.2", features = ["regexp"] }
rand = "0.8.3"
rayon = "1.5"
regex = "1.4.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.0.0"
smallvec = "1.6.1"
structopt = "0.3.21"
sysinfo = "0.15.0"
thread_local = "1.0.1"
uuid = { version = "0.8.1", features = ["v4"] }
num_cpus = "1.13.0"

[target.'cfg(target_os = "linux")'.dependencies]
block-utils = "0.10.1"
fiemap = "0.1.1"

[target.'cfg(unix)'.dependencies]
nix = "0.20"
libc = "0.2.95"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.8"
winapi-util = "0.1.5"

[dev-dependencies]
tempfile = "3.2.0"

[profile.release]
panic = "abort"
lto = "thin"

[package.metadata.deb]
maintainer = "Piotr Kołaczkowski <pkolaczk@gmail.com>"
copyright = "2020, Piotr Kołaczkowski <pkolaczk@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
A simple command-line utility program that finds duplicate, unique, under- or over-replicated files.\
Contrary to fdupes or rdfind, fclones processes files in parallel, which makes it very efficient on SSDs.
fclones communicates through standard Unix streams and it can write reports in human- and machine-friendly formats,
therefore you can easily combine it with other tools.
"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/fclones", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/fclones/README", "644"],
]

