[package]
name = "fclones"
version = "0.27.0"
description = "Finds duplicate, unique, under- or over-replicated files"
authors = ["Piotr Kołaczkowski <pkolaczk@gmail.com>"]
homepage = "https://github.com/pkolaczk/fclones"
repository = "https://github.com/pkolaczk/fclones"
categories = ["filesystem", "command-line-utilities"]
keywords = ["duplicate", "dupe", "finder", "search", "cleaner"]
license = "MIT"
readme = "README.md"
edition = "2021"
exclude = [
    ".circleci",
    "release.sh"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-counter = "1.0"
bincode = "1.3"
bytesize = "1.1"
byte-unit = "4.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = "2.34"
console = "0.15"
crossbeam-utils = "0.8"
csv = "1.1"
dashmap = "5.2"
dirs = "4.0"
dtparse = "1.2"
dunce = "1.0"
fallible-iterator = "0.2"
filetime = "0.2"
ignore = "0.4.18"
indicatif = { version = "0.14", features = ["with_rayon"] }
indexmap = "1.8"
indoc = "1.0"
itertools = "0.10"
lazy-init = "0.5"
lazy_static = "1.4"
maplit = "1.0"
metrohash = "1.0"
nom = { version = "5.1", features = ["regexp"] }
num_cpus = "1.13"
priority-queue = "1.2"
rand = "0.8"
rayon = "1.5"
regex = "1.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sled = "0.34"
smallvec = "1.8"
stfu8 = "0.2"
structopt = "0.3"
sysinfo = "0.23.10"
thread_local = "1.1"
typed-sled = "0.2.0"
uuid = { version = "0.8", features = ["v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
fiemap = "0.1"

[target.'cfg(unix)'.dependencies]
nix = "0.21"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = "0.3"
winapi-util = "0.1"

[target.'cfg(not(any(target_os = "linux", target_os = "android")))'.dependencies]
reflink = "0.1"

[dev-dependencies]
reflink = "0.1"
serde_test = "1.0"
tempfile = "3.3"

[profile.release]
panic = "abort"

[package.metadata.deb]
maintainer = "Piotr Kołaczkowski <pkolaczk@gmail.com>"
copyright = "2020, Piotr Kołaczkowski <pkolaczk@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
A simple command-line utility program that finds duplicate, unique, under- or over-replicated files.\
Contrary to fdupes or rdfind, fclones processes files in parallel, which makes it very efficient on SSDs.
fclones communicates through standard Unix streams and it can write reports in human- and machine-friendly formats,
therefore you can easily combine it with other tools.
"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/fclones", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/fclones/README", "644"],
]

