[package]
name = "fclones-gui"
version = "0.1.1"
description = "Interactive duplicate file remover"
authors = ["Piotr Kołaczkowski <pkolaczk@gmail.com>"]
homepage = "https://github.com/pkolaczk/fclones"
repository = "https://github.com/pkolaczk/fclones"
categories = ["filesystem"]
keywords = ["duplicate", "dupe", "finder", "search", "cleaner"]
license = "MIT"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "4.0"
chrono = "0.4"
fclones = { path = "../fclones", version = "0.32.1" }
itertools = "0.10"
adw = { package = "libadwaita", version = "0.2", features = ["v1_1"] }
parse-size = "1"
rand = "0.8"
rayon = "1.6"
relm4 = { version = "0.5", features = ["macros", "libadwaita"] }
relm4-components = "0.5"
